Additional automated cleanups.